<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/ask_tt">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/exit"
                android:textSize="26dp"
                android:textStyle="bold"
                android:gravity="center"
                android:id="@+id/head_exit"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:background="#525386">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/message_exit"
                android:textSize="25dp"
                android:gravity="center"
                android:id="@+id/message"
                android:layout_below="@+id/head_exit"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:background="#525386"
            android:paddingBottom="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/button_yes"
                    android:id="@+id/butt_Yes"
                    android:background="@drawable/ask_button_exit"
                    android:layout_below="@+id/message"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:layout_marginRight="2dp" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/button_No"
                    android:id="@+id/butt_NO"
                    android:background="@drawable/ask_button_exit"
                    android:layout_below="@+id/message"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:layout_marginLeft="2dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>