<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/layout_root"

    android:orientation="horizontal"

    android:layout_width="fill_parent"

    android:layout_height="fill_parent"

    >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/ask_tt">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/setting_general"
                android:gravity="center"
                android:textSize="25dp"
                android:textStyle="bold"
                android:id="@+id/setting_general"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#525386">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="@string/setting_langage"
                android:id="@+id/seting"
                android:layout_alignParentTop="true"
                android:textSize="25dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#ffffff" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <RadioGroup
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/seting"
                    android:layout_weight="1"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp">

                    <RadioButton
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/arab_language"
                        android:textSize="20dp"
                        android:id="@+id/arab_rad"
                        android:gravity="center"
                        android:paddingRight="30dp"
                        android:textColor="#ffffff"
                        android:typeface="serif" />

                    <RadioButton
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/english_language"
                        android:textSize="20dp"
                        android:id="@+id/eng_rad"
                        android:gravity="center"
                        android:paddingRight="30dp"
                        android:textColor="#ffffff"
                        android:typeface="serif" />


                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:background="#10a7aa"></LinearLayout>

    </LinearLayout>


</RelativeLayout>