<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ahmed.qutrubi.Games"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="#10a7aa">

            <TextView
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:background="@drawable/back_button"
                android:onClick="back"
                android:gravity="center"
                android:textSize="15dp"
                android:textStyle="bold"
                android:typeface="serif"
                android:id="@+id/Back"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/activity_game"
                android:textColor="#f6faf8"

                android:gravity="center_vertical|right"
                android:textSize="20dp"
                android:textStyle="bold"
                android:typeface="serif"
                android:id="@+id/textView2"
                android:paddingRight="10dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:text="@string/jeux_pronouns"
                    android:id="@+id/butt_pronom"
                    android:background="@drawable/game_activity_button"
                    android:textColor="#fffdfd"
                    android:textStyle="bold"
                    android:textSize="20dp"

                    android:gravity="center"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="30dp" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:text="@string/jeux_properties"
                    android:id="@+id/butt_avdance"
                    android:textColor="#fffdfd"
                    android:background="@drawable/game_activity_button"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/butt_pronom"
                    android:layout_toStartOf="@+id/butt_pronom"
                    android:layout_marginTop="30dp" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:text="@string/jeux_conjugate"
                    android:id="@+id/butt_primary"
                    android:background="@drawable/game_activity_button"
                    android:textColor="#fffdfd"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:layout_below="@+id/relativeLayout8"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="30dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.5">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageView5"
                android:background="@drawable/act_image"
                android:layout_gravity="center_horizontal|bottom" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
