<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ahmed.qutrubi.Conjugate"
    android:background="#eceff1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="#10a7aa">

            <TextView
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:background="@drawable/back_button"
                android:onClick="back"
                android:gravity="center"
                android:textSize="15dp"
                android:textStyle="bold"
                android:typeface="serif"
                android:id="@+id/Back"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/activity_Conjugate"
                android:textColor="#f6faf8"
                android:textSize="20dp"
                android:textStyle="bold"
                android:typeface="serif"
                android:layout_alignBottom="@+id/Back"
                android:layout_toRightOf="@+id/Back"
                android:layout_toEndOf="@+id/Back"
                android:gravity="center_vertical|right"
                android:paddingRight="10dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="#cdd2dc">

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/spin"
                android:layout_alignBottom="@+id/butt_conjugate"
                android:layout_alignTop="@+id/butt_conjugate"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/butt_conjugate"
                android:layout_toStartOf="@+id/butt_conjugate"
                android:layout_weight="1" />

            <Button
                android:layout_width="90dp"
                android:layout_height="41dp"
                android:text="@string/Conjugué"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="#f6faf8"
                android:background="@drawable/button_gnr"
                android:id="@+id/butt_conjugate"

                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/edit_verbs"
                android:layout_toStartOf="@+id/edit_verbs"
                android:onClick="butt_conjugate"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <AutoCompleteTextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/edit_verbs"

                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorPrimaryDark"

                android:textStyle="bold"
                android:gravity="center"
                android:completionThreshold="1"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#10a7aa"></LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/verb_conj"
            android:gravity="center"
            android:id="@+id/choi_layout"
            android:visibility="invisible"
            android:layout_below="@+id/Back"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/Active_voice"
                android:textSize="18dp"
                android:textColor="#f6faf8"
                android:id="@+id/tv_active"
                android:layout_alignTop="@+id/tv_passive"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="20dp"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/passive_voice"
                android:textSize="18dp"
                android:textColor="#f6faf8"
                android:gravity="center"
                android:id="@+id/tv_passive"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/tv_active"
                android:layout_toStartOf="@+id/tv_active"
                android:layout_marginRight="6dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/relative_display"
            android:layout_below="@+id/tv_info"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp">

            <ListView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/listhstry"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true" />
        </RelativeLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:text=""
            android:id="@+id/tv_info"
            android:layout_below="@+id/choi_layout"
            android:layout_marginRight="7dp"
            android:layout_marginLeft="7dp" />

        <TextView
            android:layout_width="115dp"
            android:layout_height="40dp"
            android:text="@string/history"
            android:background="@drawable/button_gnr"
            android:id="@+id/hist"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:layout_above="@+id/tv_info"
            android:layout_below="@+id/Back"
            android:textAlignment="center" />
    </LinearLayout>

</RelativeLayout>
